- Version 4.0.6 - Prevent from highlightinig mention words in system and private messages. - Fix for the new message separator which can not be appeared for the first time (only after first removal) with event listener visibilitychange

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -467,7 +467,7 @@ $mix-for-brightness: #d2d2d2;
       }
     }
 
-    &.private-message {
+    &.private {
       width: fit-content !important;
 
       &.sent {
